# ParserProject

./: .gitmodules  README.md  build_and_test.sh
params_parser/: CMakeLists.txt  params_parser.cpp  parser_exceptions.cpp  parser_exceptions.h  token.cpp  token.h
parser_tests/: CMakeLists.txt  basic_suite.cpp  errors_suite.cpp  extra_suite.cpp
src/: CMakeLists.txt
src/params_parser/: params_parser.cpp  params_parser.h
src/parser_tests/: CMakeLists.txt  basic_suite.cpp
